kuber1.5/manifest/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  selector:
    app: multitool
  ports:
  - protocol: TCP
    port: 8080
