kuber1.5/manifest/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
