kuber1.5/manifest/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-ingress-kube15
  name: service-ingress-kube15
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: frontend
    port: 80
    protocol: TCP
    targetPort: 80
  - name: backend
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ingress-controler-kub1.5
status:
  loadBalancer: {}
